Changelog
=======================================================
08052012:
1, create INDEX and edit clone code module